add planet gravity

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Rocket fly</title>
   </head>
   <body>
-    <img src="./rocket.svg" hidden alt="Rocket image" />
-    <img src="./rocket_2.png" hidden alt="Rocket image" />
+    <img src="./rocket_fire_on.svg" hidden alt="Rocket image" id="rocket_fire_on" />
+    <img src="./rocket_fire_off.svg" hidden alt="Rocket image" id="rocket_fire_off" />
 
     <main id="container" class="main"></main>
 
