--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Rocket fly</title>
   </head>
   <body>
-    <img src="./rocket_fire_on.svg" hidden alt="Rocket image" id="rocket_fire_on" />
-    <img src="./rocket_fire_off.svg" hidden alt="Rocket image" id="rocket_fire_off" />
+    <!-- <img src="./rocket_fire_on.svg" hidden alt="Rocket image" id="rocket_fire_on" /> -->
+    <!-- <img src="./rocket_fire_off.svg" hidden alt="Rocket image" id="rocket_fire_off" /> -->
 
     <main id="container" class="main"></main>
 
